# mutagen-ez-gui

./: .pre-commit-config.yaml  README.md  main.py  metadata_setters.py  mutagui.kv  pyproject.toml  requirements.txt  styles.py
requirements/: dev.txt  prod.txt
src/mutagen_ez_gui/: main.py  metadata_setters.py
